examples/bad/wrongtypes.hid
/* Program will end with an error caused by trying to add an integer and a bool together */

int 42;
bool b;
print (42 + b);
